# Employee-Attrition-MLOps

./: .env  .gitignore  Dockerfile  Dockerfile.drift  Dockerfile.frontend  Dockerfile.mlflow  Makefile  README.md  check_drift_via_api.py  check_production_drift.py  codebase_dump.txt  docker-compose.yml  drift_api.py  fairness_assessment_pipeline.md  mkdocs.yml  pyproject.toml  pytest.ini  save_reference_data.py  test_drift_api_client.py  test_mlflow_drift.py  test_prediction_drift_mlflow.py
.github/workflows/: ci.yml  drift_detection.yml  model_promotion.yml  production_automation.yml
docs/: README.md  api_documentation.md  architecture.md  ci_cd_automation.md  ci_cd_workflow.md  docker_guide.md  drift_detection_guide.md  getting_started.md  index.md  mkdocs.yml  mlflow_usage.md  mlops_workflow_guide.md  monitoring.md  monitoring_strategy.md  responsible_ai.md  setup_details.md  troubleshooting.md
docs/docs/: index.md  monitoring-and-retraining.md
drift_artifacts/: README.md
drift_reference/: README.md
mlruns/0/: meta.yaml
mlruns/118131286554700776/: meta.yaml
mlruns/118131286554700776/002776a24bcd4b6d81a8ac8ef10cda79/: meta.yaml
mlruns/118131286554700776/003635de58b34ea49594c5fe0a2d0156/: meta.yaml
mlruns/118131286554700776/00d1112fef594a32bb79ccf170d2cca2/: meta.yaml
mlruns/118131286554700776/01b6fac7d26c4e9bb0e1e1f4ae7a7348/: meta.yaml
mlruns/118131286554700776/02c27064452c4994a219ba162e539b22/: meta.yaml
mlruns/118131286554700776/032c2fa3599541ea9f8494b5f67adfea/: meta.yaml
mlruns/118131286554700776/08ada864b315432e81763b2ec6811620/: meta.yaml
mlruns/118131286554700776/0ae0343d94ab4ea683dcd8a846ebfab6/: meta.yaml
mlruns/118131286554700776/0b551d78ae034987aa1894246821f14c/: meta.yaml
mlruns/118131286554700776/0d03cc6a83844de1b84eff46895b5e2b/: meta.yaml
mlruns/118131286554700776/0d1910982fdc4c0d8a71053b428ba719/: meta.yaml
mlruns/118131286554700776/0db0db0ac6ec4adb8ebc115b8eee89fc/: meta.yaml
mlruns/118131286554700776/0df78591f6654de39410e8cd59a561ae/: meta.yaml
mlruns/118131286554700776/0f196d89528a49d790c0e836790fa315/: meta.yaml
mlruns/118131286554700776/10ec2454cdcb490bbbdf086efa875f37/: meta.yaml
mlruns/118131286554700776/11ffc02fb88c48039fd8e16944ef2472/: meta.yaml
mlruns/118131286554700776/148053f6c3894ca5b69fb2b39808a650/: meta.yaml
mlruns/118131286554700776/14b923dd9d2a4dd5827811594ed06a61/: meta.yaml
mlruns/118131286554700776/15aefc67d5ec48ceb53854d73fa779e1/: meta.yaml
mlruns/118131286554700776/17777fcb3ec14c1ba47100444843af08/: meta.yaml
mlruns/118131286554700776/1a194b8d927d4ca98b44108d5080a1d5/: meta.yaml
mlruns/118131286554700776/1b315a4afe2144008fd09545fb46ae0c/: meta.yaml
mlruns/118131286554700776/1b31f01622ff498d9e4347bef3171b37/: meta.yaml
mlruns/118131286554700776/1b840a674a7648c29b8e555f9f9539eb/: meta.yaml
mlruns/118131286554700776/1c071d5d5c764b378bd646fc8536c5ab/: meta.yaml
mlruns/118131286554700776/1cfbdd760dca4ec1ab35cd9d8ca5b620/: meta.yaml
mlruns/118131286554700776/2141a904a2dd4d66a3d372279afa5a0c/: meta.yaml
mlruns/118131286554700776/2370e4c5fa554f4196daba21a5891bcc/: meta.yaml
mlruns/118131286554700776/253932757a12473788283ac4b16c867a/: meta.yaml
mlruns/118131286554700776/25ecc8afdf3340adadd8a4b9726c91ff/: meta.yaml
mlruns/118131286554700776/266969b5a3f44f4cbf3d436d3ba5b15e/: meta.yaml
mlruns/118131286554700776/27ce8901f58141d7af2e292a51910057/: meta.yaml
mlruns/118131286554700776/2a2532cadaff4871ac33412c2eb12df4/: meta.yaml
mlruns/118131286554700776/2ab475fbca7f4596ad5a34e72ba2b66a/: meta.yaml
mlruns/118131286554700776/2d87273e5b4e400393730a1dc300d3fa/: meta.yaml
mlruns/118131286554700776/2dcf4756bda641ddbaa70ab1080b7250/: meta.yaml
mlruns/118131286554700776/30f01092a61d46c3bdd54082aae6a695/: meta.yaml
mlruns/118131286554700776/34b3440e7100436c9941e307ff465920/: meta.yaml
mlruns/118131286554700776/397c386228384823b84912e7b8f8b8c3/: meta.yaml
mlruns/118131286554700776/39d10b65abdc4fddac1a4ec1c3e62356/: meta.yaml
mlruns/118131286554700776/3a402e2491fa4ad0a5ee1ea96f5a015d/: meta.yaml
mlruns/118131286554700776/3b0a99cf138147ecb43cc5f3a3aeb069/: meta.yaml
mlruns/118131286554700776/3b76256012e44e2495e802e10631458e/: meta.yaml
mlruns/118131286554700776/3cbe761d3de1407f9761aa35e5102818/: meta.yaml
mlruns/226317363796254688/: meta.yaml
mlruns/348159560743303299/: meta.yaml
mlruns/663065666979404977/: meta.yaml
mlruns/904653203761099376/: meta.yaml
reports/: confusion_matrix_05c9b38c261744cf8e12edb8be6d6da0.json  confusion_matrix_07f8afc92c384545b19b44b5b33b8f36.json  confusion_matrix_4b57a6f552d14b38b9b143d90eded462.json  confusion_matrix_7a0d1ab02079454f949689bc297d0816.json  confusion_matrix_9f95301bc17a4f408ffabfc322eea6ce.json  confusion_matrix_ccfd88ff5ac2429f9e4f9778a0153363.json  drift_report.json  fairness_report_05c9b38c261744cf8e12edb8be6d6da0.json  fairness_report_4b57a6f552d14b38b9b143d90eded462.json  fairness_report_9f95301bc17a4f408ffabfc322eea6ce.json  fairness_report_a7ef292bd571481e870ec06ff3f6d81e.json  fairness_report_ccfd88ff5ac2429f9e4f9778a0153363.json  logreg_best_hpo_params.json
scripts/: README.md  batch_predict.py  check_prediction_drift.py  create_drift_reference.py  drift_detection.py  hpo.py  optimize_train_select.py  promote_model.py  run_production_automation.py  save_reference_data.py  seed_database_from_csv.py  test_mlflow.py  train.py
src/: README.md
src/config/: __init__.py  config.py
src/employee_attrition_mlops/: README.md  api.py  config.py  data_processing.py  drift_api.py  drift_detection.py  pipelines.py  utils.py
src/frontend/: README.md  app.py
src/monitoring/: README.md  __init__.py  drift_detection.py
src/utils/: __init__.py  logger.py
tests/: README.md  test_api.py  test_batch_predict.py  test_create_drift_reference.py  test_data_processing.py  test_drift_detection.py  test_fairness.py  test_feature_drift.py  test_frontend.py  test_model_automation.py  test_pipelines.py  test_prediction_drift.py  test_preprocess.py  test_production_automation.py  test_save_reference_data.py  test_utils.py
(+4447 files in other folders)
