
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
name = "module1"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]




requires-python = "~=3.11.0"

[tool.poetry.dependencies]
mkdocs = "*"
optuna ="*"
sqlalchemy ="*"
pyodbc = "*"
pip = "*"
imbalanced-learn ="*"
pytest = "^7.2.0"
python-dotenv = "^1.0.0"
ruff = "*"
ydata-profiling = "^4.8"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.2.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
jupyter = "^1.0.0"
ipykernel = "^6.20.0"
scipy = "^1.10.0"
statsmodels = "^0.14.0"
# Course 1 Specific
dowhy = "*"
# MLOps
mlflow = "^2.1.0" # Use a specific recent version
fastapi = "^0.109.0"
# Allows 0.29.x but not 1.0.0
uvicorn = {extras = ["standard"], version = "^0.29.0"} 
requests = "^2.28.0"
# XAI & Fairness
shap = "^0.45.0"
fairlearn = "*" # 
# AutoML
tpot = "^0.11.7" # Check for latest TPOT version
# Drift Detection
evidently = "^0.4.0" # Allows 0.4.x but not 1.0.0
# Other utilities
joblib = "^1.2.0"
# ydata-profiling requires Pydantic v2
pydantic = {extras = ["email"], version = "^2.0.0"} # Allows 2.x.x 

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^23.1.0"
flake8 = "^6.0.0"
ipywidgets = "^8.0.0"





[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/employee_attrition_mlops/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

