[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Consolidated project metadata under [tool.poetry]
[tool.poetry]
name = "employee-attrition-mlops"
version = "0.1.0"
description = "Employee Attrition MLOps Project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]
# --- This line tells Poetry where your package code is ---
packages = [{include = "employee_attrition_mlops", from = "src"}]

# --- Dependencies Section (all original dependencies retained) ---
[tool.poetry.dependencies]
python = "~=3.11.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "1.6.1"
optuna = "*"
sqlalchemy = "*"
# Add both drivers back as regular dependencies
pyodbc = "*"
pymssql = "^2.2.10"
mlflow = "^2.1.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-dotenv = "^1.0.0"
imbalanced-learn = "*"
shap = "^0.45.0"
fairlearn = "*"
evidently = "^0.4.0"
ydata-profiling = "^4.8"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
pytest = "^7.2.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"
pip = "*"
requests = "^2.28.0"
joblib = "^1.2.0"
pydantic = {extras = ["email"], version = "^2.0.0"}
tpot = "^0.11.7"
dowhy = "*"
ruff = "*"
streamlit = "*"
streamlit_option_menu = "*"
httpx = "^0.27.0"

# --- Dependency Groups (kept as original) ---
alembic = "^1.15.2"
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/employee_attrition_mlops/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-ra -q"

